-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b01
-
generic
-
windows
-
Verified
The CI job for JDK-8196217 reported 8 tests that failed with
# Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\services/virtualMemoryTracker.hpp:53), pid=5208, tid=9992
# assert(_committed <= _reserved) failed: Sanity check
sanity/ServerTiersFlagsTest.java
runtime/NMT/CommitOverlappingRegions.java
runtime/NMT/JcmdBaselineDetail.java
runtime/NMT/JcmdDetailDiff.java
runtime/NMT/ThreadVirtualAllocTestType.java
runtime/NMT/VirtualAllocCommitMerge.java
runtime/NMT/VirtualAllocCommitUncommitRecommit.java
runtime/NMT/VirtualAllocTestType.java
All failures were on Windows.
# Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\services/virtualMemoryTracker.hpp:53), pid=5208, tid=9992
# assert(_committed <= _reserved) failed: Sanity check
sanity/ServerTiersFlagsTest.java
runtime/NMT/CommitOverlappingRegions.java
runtime/NMT/JcmdBaselineDetail.java
runtime/NMT/JcmdDetailDiff.java
runtime/NMT/ThreadVirtualAllocTestType.java
runtime/NMT/VirtualAllocCommitMerge.java
runtime/NMT/VirtualAllocCommitUncommitRecommit.java
runtime/NMT/VirtualAllocTestType.java
All failures were on Windows.
- relates to
-
JDK-8196405 [REDO] NMT: add_committed_regions doesn't merge succeeding regions
-
- Resolved
-
-
JDK-8196217 NMT: add_committed_regions doesn't merge succeeding regions
-
- Closed
-