8196372: [BACKOUT] NMT: add_committed_regions doesn't merge succeeding regions

Reviewed-by: stefank